--- a/src/styles/mapas.less
+++ b/src/styles/mapas.less
@@ -4,7 +4,7 @@
     corDeBotao:black;
 }
 
-#fonts() {
+#fontes() {
     fontePrincipal:sans-serifa;
     fonteSecundaria:arial;
     fonteTerceira:Rooto;
