atualização da atividade exerccio.less

--- a/src/styles/mapas.less
+++ b/src/styles/mapas.less
@@ -1,11 +1,11 @@
 #cores() {
-    backgroundcolor: red;
-    corDeText:blue;
-    corDeBotao:black;
+    backgroundcolor: #f5f6fa;
+    corSecundaria: #182C61;
+    corDeBotao: #44bd32;
 }
 
 #fontes() {
-    fontePrincipal:sans-serifa;
+    fontePrincipal:Roboto, sans-serif;
     fonteSecundaria:arial;
     fonteTerceira:Rooto;
 }
