--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -1,8 +1,9 @@
-@import "./mapas.less";
-@import "./variaveis.less";
+@import "variaveis.less";
+@import "mapas.less";
 
 @breakpointMobile: ~"(max-width: 767px)";
-@breakpoinntTablet: ~"(min-width: 768px) and (max-width: 1023px)";
+@breakpointTablet: ~"(min-width 768px) and (max-width: 1023px)";
+@breakpointDesktop: ~"(max-width: 1024px)";
 
 * {
     margin: 0;
@@ -11,14 +12,12 @@
     font-family:#fontes[fontePrincipal];
 }
 
-header {
-    background-color: #cores[backgroundcolor];
-    padding: 16px 0;
-}
-
 body {
-    background-color: #cores[backgroundcolor];
-    font-size: 16px;
+    background-color:#cores[backgroundcolor];
+
+
+li {
+    list-style: none;
 }
 
 .container {
@@ -27,14 +26,85 @@ body {
     margin: 0 auto;
 }
 
-@media @breakpointMobile {
-    .container {
-        max-width: 80%;
+header {
+    background-color: #cores[corSecundaria];
+    position: sticky;
+    top: 0;
+    left: 0;
+    
+    &.container {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        padding: 16px 0;
     }
 }
 
-@media @breakpoinntTablet {
+.menu {
+    display: flex;
+    
+    &li {
+        font-weight: bold;
+        margin-left: 24px;
+    }
+    
+    &li a {
+        color: #fff;
+        text-decoration: none;
+    }
+}
+
+    section {
+        padding: 56px 0;
+    }
+
+.products {
+    margin-top: 40px;
+    display: grid;
+    grid-template-columns: repeat(3, 32.66%);
+    column-gap: 1%;
+    row-gap: 4%;
+    width: 100%;
+    
+    &-item img {
+        width: 100%;
+        border-radius: 16px;
+    }
+    
+    &.product-button {
+        display: block;
+        background-color:#cores[corDeBotao];
+        color: #fff;
+        text-align: center;
+        padding: 8px 0;
+        border-radius: 8px;
+    margin-top: 8px;
+    text-decoration: none;
+    &.product-button:hover {
+        background-color:#cores[corDeBotao];
+    }
+  }
+}
+}
+
+
+@media @breakpointMobile {
     .container {
         max-width: 80%;
+
+        .products {
+            grid-template-columns: repeat(2, 4848.5%);
+        }
+    }
+}
+
+@media @breakpointTablet {
+    .container {
+        max-width: 80%;
+    }
+
+    .products {
+        grid-template-columns: repeat(2, 48.5%);
+        column-gap: 3%;
     }
 }
